Fix navbar z-index
navbar was rendering bellow postNav

--- a/assets/scss/breakpoints/_mobileup.scss
+++ b/assets/scss/breakpoints/_mobileup.scss
@@ -70,7 +70,7 @@ MENU STYLING
 ***************/
 
 .nav-collapse {
-  z-index: 1;
+  z-index: 100;
 
   ul {
     margin: 0;
